@@ -1,6 +1,7 @@
 49
 ================
 
+07/05/24 Reports: cope with being given a negative number for rounding digits
 07/05/24 ClinicTypeDescription field mispelled as ClinicTypeDescripton in new dbs
 06/05/24 Query builder: animal queries can include test and vacc dates
 06/05/24 Query builder: On shelter at date/between two dates criteria
